--- a/locale/tr.po
+++ b/locale/tr.po
@@ -13,7 +13,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 929bdb49da44562d032228b8f93c5c598dae8678)\n"
+"X-Generator: Launchpad (build 26785e5a6adccabf68a42300ea7053912615013e)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr ""
@@ -2504,6 +2504,9 @@ msgid ""
 msgstr ""
 
 msgid "Initial vertical position of the editing cursor in the Bible editors"
+msgstr ""
+
+msgid "Choose theme"
 msgstr ""
 
 msgid "Show breadcrumbs"
