--- a/locale/id.po
+++ b/locale/id.po
@@ -7,13 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2021-04-19 13:19+0000\n"
-"Last-Translator: Aranggi Josef Toar <Unknown>\n"
+"PO-Revision-Date: 2021-04-21 20:28+0000\n"
+"Last-Translator: Phil Fields <oreo@bahasakita.net>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 8932ab84469600dc3d8b3344fb7135c702d5179e)\n"
+"X-Generator: Launchpad (build 1552fceb1603b3da6cfa437575d9c9fc4b2e683a)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr ""
@@ -89,7 +89,7 @@ msgid "New"
 msgstr "Baru"
 
 msgid "Pending"
-msgstr "Tertunda"
+msgstr "Menunggu"
 
 msgid "In progress"
 msgstr "Dalam proses"
@@ -1314,7 +1314,7 @@ msgid ""
 msgstr ""
 
 msgid "A verification email was sent to"
-msgstr "Sebuah email konfirmasi sudah dikirim kepada"
+msgstr "Email verifikasi telah dikirim kepada"
 
 msgid "No changes were made"
 msgstr ""
@@ -1938,7 +1938,7 @@ msgid "This account needs a password."
 msgstr "Akun ini perlu kata sandi."
 
 msgid "Please login the other way, through Menu / Login."
-msgstr ""
+msgstr "Mohon masuk dengan cara lain, melalui tombol Menu/ Masuk."
 
 msgid "Select which Bible to display"
 msgstr ""
@@ -2097,13 +2097,13 @@ msgid "unassign"
 msgstr ""
 
 msgid "Login"
-msgstr ""
+msgstr "Masuk"
 
 msgid "Read"
 msgstr "Baca"
 
 msgid "User resources"
-msgstr "Bahan Tafsir"
+msgstr "Bahan tafsir pengguna"
 
 msgid "Advanced search"
 msgstr ""
@@ -2511,7 +2511,7 @@ msgid "Initial vertical position of the editing cursor in the Bible editors"
 msgstr ""
 
 msgid "Choose theme"
-msgstr ""
+msgstr "Pilih tema"
 
 msgid "Show breadcrumbs"
 msgstr ""
@@ -7183,6 +7183,8 @@ msgid ""
 "Open the web address in a browser, follow the instructions on the screen to "
 "configure Bibledit Cloud, and log in."
 msgstr ""
+"Buka alamat melalui sebuah peramban web, ikuti petunjuk di sana untuk "
+"menkonfigurasi Bibledit Cloud. Kemudian masuk ke dalam akun Anda."
 
 msgid "The following command shows the status of Bibledit Cloud:"
 msgstr ""
@@ -9160,6 +9162,8 @@ msgid ""
 "Open the web address in the browser, follow the instructions on the screen "
 "to configure Bibledit Cloud, and log in."
 msgstr ""
+"Buka alamat melalui sebuah peramban web, ikuti petunjuk di sana untuk "
+"menkonfigurasi Bibledit Cloud. Kemudian masuk ke dalam akun Anda."
 
 msgid ""
 "Bibledit assists with checking how consistent words have been translated in "
@@ -9275,13 +9279,13 @@ msgid "Signup"
 msgstr "Mendaftar"
 
 msgid "Your account is pending."
-msgstr ""
+msgstr "Akun Anda belum aktif."
 
 msgid "A verification email has been sent."
-msgstr ""
+msgstr "Email verifikasi telah kami kirim."
 
 msgid "Follow the instructions in the email to activate your account."
-msgstr ""
+msgstr "Ikuti petunjuk dalam email tersebut untuk mengaktivasi akun Anda."
 
 msgid "Switched user"
 msgstr "Sudah mengganti akun pengguna"
@@ -11890,10 +11894,10 @@ msgid "Server"
 msgstr ""
 
 msgid "Cannot send email yet."
-msgstr ""
+msgstr "Belum dapat mengirim email."
 
 msgid "The emailer is not yet set up."
-msgstr ""
+msgstr "Pengiriman email otomatis belum disiapkan."
 
 msgid "The email address does not appear to be valid"
 msgstr "Alamat email tadi nampaknya tidak benar."
